use sensebox font online

--- a/styles/pdf.css
+++ b/styles/pdf.css
@@ -26,11 +26,11 @@
 
 
 /* @import must be at top of file, otherwise CSS will not work */
-@import url("//hello.myfonts.net/count/2ef157");
+@import url("https://hello.myfonts.net/count/2ef157");
 
 @font-face {font-family: 'BrixSlab-Bold';src: url('BrixSlab-Bold.ttf') format('truetype');}
 @font-face {font-family: 'BrixSlab-Regular';src: url('BrixSlab-Regular.ttf') format('truetype');}
 
 body {
-	font-family: BrixSlab-Regular;
+  font-family: BrixSlab-Regular;
 }
